# workspace-cli-oss

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: release.yml
tests/: test_bootstrap_materializes_stack_metadata.py  test_bootstrap_robust_rmtree.py  test_cli_smoke.py  test_composer.py  test_deploy_resolution_with_overrides.py  test_deploy_secrets.py  test_doctor_stack_metadata_drift.py  test_governance.py  test_guide_command.py  test_init_product_template_requires_confirmation.py  test_introspect.py  test_manifest.py  test_migrate_deploy.py  test_registry.py  test_scaffold_repo.py  test_scaffold_stack.py  test_secrets_resolution_with_overrides.py  test_status.py  test_sync.py  test_update_check.py  test_workspace_overrides_schema.py
wsp/: __init__.py  __main__.py  audit_action.py  bootstrap_action.py  cli.py  composer.py  deploy_action.py  errors.py  git_ops.py  governance.py  introspect.py  manifest.py  registry.py  scaffold_repo_action.py  scaffold_stack_action.py  secrets_action.py  status_action.py  sync_action.py  update_check.py
wsp/guides/: __init__.py  deploy.md  discover.md  init.md  onboard-product.md  quickstart.md  secrets.md
wsp/schemas/: awac.schema.json  deploy.schema.json  devvault.schema.json  lock.schema.json  workspace.schema.json
